fixed uneven grid item width

--- a/ecommerce-bootstrap-website/style.css
+++ b/ecommerce-bootstrap-website/style.css
@@ -34,8 +34,8 @@
   font-size: 50px;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 650px) {
   .prod-card {
-    margin: 25px;
+    margin: 15px;
   }
 }
